--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "eyemotif",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
+    "@types/webpack-env": "^1.18.0",
     "css-loader": "^6.7.3",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "path-browserify": "^1.0.1"
   }
 }
